@@ -52,6 +52,7 @@ Package org.springframework.osgi.service
 * fixed reference collection listener behaviour by invoking the callbacks before items are removed from the collection
 * fixed service registration listener behaviour by invoking the callbacks before the service gets unregistered
 * improved proxy class generation to avoid introspection problems in concurrent environments
+* improved mandatory reference checkup to lazily request the backing service
 
 Package org.springframework.osgi.mock
 * added specific OSGi r4.2 methods
